--- a/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
@@ -85,7 +85,8 @@ die inwerkt op haar. Dat is vaak zo. Wanneer een voorwerp steunt op een
 zwaartekracht en normaalkracht in op het voorwerp, dan is het **gewicht gelijk
 aan de zwaartekracht**.
 
-{{< expand "Verschillende definities voor gewicht" >}}
+<Expand title="Verschillende definities voor gewicht">
+
 Als je verschillende handboeken van fysica naast elkaar legt, zal je zien dat
 "gewicht" niet overal dezelfde definitie heeft. Sommige handboeken definiëren
 gewicht als de [zwaartekracht](zwaartekracht) die inwerkt op een voorwerp,
@@ -94,7 +95,8 @@ voorwerp zelf, en is er niet per se een ondersteuning nodig.
 
 In alle definities van gewicht, is gewicht wel altijd **een kracht** met als
 eenheid **newton** en **nóóit kilogram**.
-{{< /expand >}}
+
+</Expand>
 
 ## Gewicht en normaalkracht zijn tegengesteld
 
