--- a/src/content/lessen/fysica/lichtstralen/lichtbronnen/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/lichtbronnen/index.mdx
@@ -48,7 +48,7 @@ eigenlijk een verzameling van heel veel puntvormige lichtbronnen.
 
 ![](img/diffuus.png)
 
-{{< expand "De flitsende fotograaf" >}}
+<Expand title="De flitsende fotograaf">
 
 Fotografen moeten voortdurend nadenken over de lichtbron die ze gebruiken. Een
 puntvormige lichtbron <Mute text="(zoals de flitser op een fototoestel)" /> zorgt
@@ -62,4 +62,5 @@ paraplu** te laten gaan. Een andere mogelijkheid is om een _diffuser_ op de
 flits te klikken of met behulp van een **softbox**.
 
 ![softbox](img/softbox.jpg "Een softbox.")
-{{< /expand >}}
+
+</Expand>
