--- a/src/content/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/index.mdx
@@ -42,7 +42,8 @@ schaduw van de maan op de aarde valt.
 
 ![](img/zonsverduistering.png)
 
-{{< expand "Uitbreiding: tekening niet op schaal" >}}
+<Expand title="Uitbreiding: tekening niet op schaal">
+
 Het is belangrijk te beseffen dat het bovenstaande schema **niet op schaal**
 is. Dat wil zeggen dat de verhoudingen van de groottes van de aarde, de maan
 en de zon anders zijn op de tekening dan in werkelijkheid. Ook de afstanden
@@ -52,7 +53,8 @@ kunnen zien omdat ze zoveel kleiner zijn dan de zon en er heel ver vandaan
 zijn. Uit nieuwsgierigheid heb ik op het einde van deze les toch eens
 [een tekening op schaal gemaakt](#de-aarde-de-zon-en-de-maan-op-schaal) van
 deze drie hemellichamen.
-{{< /expand >}}
+
+</Expand>
 
 Daar waar de kernschaduw op de aarde valt, ziet een totale zonsverduistering er
 als volgt uit:
@@ -63,7 +65,9 @@ In de gebieden waar de **bijschaduw** van de maan valt, is er een **gedeeltelijk
 
 ![Gedeeltelijke zonsverduistering](img/partial_eclipse.png "Gedeeltelijke zonsverduistering (bron: <a href='https://en.wikipedia.org/wiki/Solar_eclipse#/media/File:Partial_solar_eclipse_Oct_23_2014_Minneapolis_5-36pm_Ruen1.png'>Wikipedia</a>)")
 
-{{< expand "Uitbreiding: soorten zonsverduistering" >}}
+
+<Expand title="Uitbreiding: soorten zonsverduistering">
+
 De afstand tussen de aarde en de maan schommelt tussen ca. 360 000 km en ca.
 410 000 km. Enkel wanneer de man voldoende dicht bij de aarde staat, kan er een
 **totale zonsverduistering** zijn. Wanneer de maan te ver van de aarde staat,
@@ -77,7 +81,8 @@ zonsverduisteringen. Per anderhalf jaar zijn er gemiddeld een vijftal
 zonsverduisteringen. Die kunnen eender waar op aarde plaatsvinden.
 Meestal is slechts één daarvan een totale zonsverduistering en zijn de rest
 ringvormige zonsverduisteringen.
-{{< /expand >}}
+
+</Expand>
 
 ## De maanfasen
 
