--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -65,7 +65,8 @@ $\green{f}$ en $\blue{g}$:
  \Leftrightarrow \orange{x} &= \frac{7}{3}\\\\\
 \end{split}
 
-{{< expand "Toon met meer tussenstappen" >}}
+<Expand title="Toon met meer tussenstappen">
+
 \begin{split}
 -x + 4 &= 2x - 3\\\\\
  \Leftrightarrow -x + 4 \pink{- 2x} &= 2x - 3 \pink{- 2x}\\\\\
@@ -78,7 +79,8 @@ $\green{f}$ en $\blue{g}$:
  \Leftrightarrow \cancelto{1}{\frac{-3}{\pink{-3}}}\cdot x &= \frac{- 7}{\pink{-3}}\\\\\
  \Leftrightarrow x &= \frac{7}{3}\\\\\
 \end{split}
-{{< /expand >}}
+
+</Expand>
 
 De $x-$coördinaat van het snijpunt van $\green{f}$ en $\blue{g}$ is dus
 $\orange{\frac{7}{3}}$. We kunnen dit controleren door $\orange{\frac{7}{3}}$ in te vullen in $\green{f}$ en $\blue{g}$:
