--- a/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
@@ -63,7 +63,8 @@ Als je de oplossing(en) in een [verzameling](../verzamelingen) stopt, noemen we 
 De oplossingsverzameling $V$ voor het voorbeeld is dus:
 $$V = \\{\orange{-1}\\}$$
 
-{{< expand "Uitbreiding: Meerdere oplossingen" >}}
+<Expand title="Uitbreiding: Meerdere oplossingen">
+
 Het kan natuurlijk ook dat er meer dan één getal in de oplossingsverzameling
 zit. Voor de vergelijking $x^2 + 2x = 3$ zijn er bijvoorbeeld twee waarden
 die we kunnen invullen voor $x$ zodat de gelijkheid klopt: $\orange{1}$ en
@@ -84,7 +85,8 @@ Wanneer we $\orange{-3}$ invullen, krijgen we:
 Zowel $\orange{1}$ als $\orange{-3}$ is een oplossing van de vergelijking. De
 oplossingsverzameling is dan
 $$V = \\{\orange{1}, \orange{-3}\\}$$
-{{< /expand >}}
+
+</Expand>
 
 ## Samengevat
 
