--- a/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
@@ -40,7 +40,8 @@ Achter elkaar schrijven we de omvorming als volgt:
 \Leftrightarrow\quad &x - &4 &= &-3x - &7
 \end{split}
 
-{{< expand "Uitbreiding: dubbele pijlen" >}}
+<Expand title="Uitbreiding: dubbele pijlen">
+
 Er staat niet voor niets een _dubbele pijl_ ($\Leftrightarrow$) tussen de vergelijkingen in plaats van een enkele pijl ($\Rightarrow$ of $\Leftarrow$). Je kan namelijk van de laatste vergelijking ook terug naar de eerste vergelijking gaan. De omvorming is _omkeerbaar_:
 \begin{split}
 &x - &4 &= \quad &-3x - &7\\\\\
@@ -49,7 +50,8 @@ Er staat niet voor niets een _dubbele pijl_ ($\Leftrightarrow$) tussen de vergel
 \end{split}
 
 Zulke pijlen zijn symbolen uit de logica. Een dubbele pijl wijst op een equivalentie, een enkele pijl op een implicatie.
-{{< /expand >}}
+
+</Expand>
 
 ## Vergelijkingen oplossen door om te vormen
 
@@ -90,7 +92,8 @@ Vervolgens moeten we enkel nog de $3$ weg krijgen. Dat kan als volgt:
 \end{split}
 **En we hebben $x$ gevonden!!!** 🎉💃💪
 
-{{< expand "Uitbreiding: via een andere weg" >}}
+<Expand title="Uitbreiding: via een andere weg">
+
 Als we in de stap met de keuze tussen $\orange{3}$ en $-6$, kiezen om eerst de $\orange{3}$ weg te werken in plaats van de $6$, vinden we natuurlijk hetzelfde:
 
 \begin{split}
@@ -104,7 +107,8 @@ Als we in de stap met de keuze tussen $\orange{3}$ en $-6$, kiezen om eerst de $
 \end{split}
 
 Maar zoals je ziet, maken we het ons zo onnodig moeilijk.
-{{< /expand >}}
+
+</Expand>
 
 ## En wat nu?
 
