--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
@@ -115,7 +115,7 @@ noemer te delen door $\Delta x$.
 
 ![$\Delta x$ wegdelen uit teller en noemer van de afgeleide.](img/delta_x_wegdelen.png)
 
-{{< expand "Mogen we de teller en noemer zomaar delen door $\Delta x$?" >}}
+<Expand title="Mogen we de teller en noemer zomaar delen door $\Delta x$?">
 
 Wanneer je deelt, moet je altijd goed opletten dat je **niet aan het delen bent
 door nul**. Als $\Delta x$ gelijk zou zijn aan nul, zouden we de teller en
@@ -126,7 +126,7 @@ naar nul** berekenen. Dat betekent dat $\Delta x$ héél dicht bij nul komt, maa
 **nooit gelijk wordt aan nul**. We mogen de teller en noemer dus zonder
 probleem delen door $\Delta x$.
 
-{{< /expand >}}
+</Expand>
 
 Dat ziet er al een heel stuk properder uit! 😀 Het enige wat ons nu nog
 rest is de **limiet zelf berekenen**. De limiet zegt enkel iets over $\Delta
