--- a/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
@@ -114,11 +114,13 @@ $$\frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{x\_2} - \orange{x\_1}}$$
     plaats van gewoon de "verandering van de functiewaarde tussen $x\_1$ en
     $x\_2$".
 
-{{< expand "Waarom zorgt die deling door $\orange{x_2} - \orange{x_1}$ voor een gemiddelde?" >}}
+<Expand title="Waarom zorgt die deling door $\orange{x_2} - \orange{x_1}$ voor een gemiddelde?">
+
 Stel dat je de **gemiddelde** score wilt berekenen die de leerlingen van een bepaalde klas haalden op een test. Dan ga je alle punten optellen en **delen door het totaal aantal testen**. Door te delen door het totaal aantal testen, krijg je de gemiddelde score **per test**.
 
 Op dezelfde manier krijgen we de **gemiddelde** verandering van de functiewaarde **per $x-$eenheid** door te delen door $\orange{x_2} - \orange{x_1}$.
-{{< /expand >}}
+
+</Expand>
 
 We zeggen dat deze formule de **gemiddelde verandering van de functiewaarde** berekent per $x-$eenheid tussen $\orange{x\_1}$ en $\orange{x\_2}$.
 
@@ -127,7 +129,8 @@ We zeggen dat deze formule de **gemiddelde verandering van de functiewaarde** be
 Het is belangrijk om te weten dat we die formule niet enkel kunnen gebruiken om gemiddelde snelheid te berekenen, maar voor nog veel andere soorten van _gemiddelde verandering_.
 De formule wordt zelfs zo vaak gebruikt, dat ze een eigen naam heeft gekregen: het **differentiequotiënt**.
 
-{{< expand "Waar komt de naam differentiequotiënt vandaan?" >}}
+<Expand title="Waar komt de naam differentiequotiënt vandaan?">
+
 Nu denk je misschien: "Een differ-**watte**?! 🤨" Waar komt die
 naam vandaan? Het woord bestaat uit twee stukken:
 
@@ -137,7 +140,7 @@ naam vandaan? Het woord bestaat uit twee stukken:
 2. **-quotiënt**: moeilijk woord voor een _deling_ of een _breuk_. Dit wijst
    op het feit dat **het ene verschil wordt gedeeld door het andere**.
 
-{{< /expand >}}
+</Expand>
 
 ## Het verschil afkorten met $\Delta$
 
