--- a/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
@@ -18,13 +18,15 @@ Enkele voorbeelden:
 -   De eenterm $\orange{-\frac{2}{3}x^2z^2}$ is een product van
     $\orange{-\frac{2}{3}}$, $\orange{x^2}$ en $\orange{z^2}$
 
-{{< expand "Waar is het maalteken naartoe?" >}}
+<Expand title="Waar is het maalteken naartoe?">
+
 We hoeven het maalteken ($\cdot$) niet te schrijven wanneer we variabelen met
 elkaar vermenigvuldigen. $a\cdot b^2$ mogen we dus korter schrijven als $ab^2$.
 
 Ook wanneer we een getal met een variabele vermenigvuldigen, mogen we het
 maalteken achterwege laten. $2\cdot x^3$ zullen we korter schrijven als $2x^3$.
-{{< /expand >}}
+
+</Expand>
 
 Ook wanneer een getal of variabele **alleen** staat, spreken we van een
 eenterm. De volgende voorbeelden zijn dus ook eentermen:
