--- a/src/content/lessen/wiskunde/eentermen/product/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/product/index.mdx
@@ -49,7 +49,7 @@ x^5:x^2 &= x^{5 - 2}\\\\\
 Als we deze rekenregels goed kunnen toepassen, zal het vermenigvuldigen en
 delen van eentermen veel eenvoudiger worden.
 
-{{< expand "Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in\mathbb{Q}$) en voor delingen $\in \mathbb{R}_0$ (of $\in\mathbb{Q}_0$)" >}}
+<Expand title="Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in\mathbb{Q}$) en voor delingen $\in \mathbb{R}_0$ (of $\in\mathbb{Q}_0$)">
 
 We gaan ervan uit dat alle variabelen in deze les een element zijn van de reële
 getallen. Als je nog niet weet wat reële getallen zijn, mag je ook aannemen
@@ -59,7 +59,8 @@ betreft bewerkingen met eentermen.
 
 Voor delingen leggen we de beperking op dat de variabelen niet $0$ mogen zijn
 om delingen door $0$ te voorkomen.
-{{< /expand >}}
+
+</Expand>
 
 ## Eentermen met elkaar vermenigvuldigen
 
