--- a/src/content/lessen/wiskunde/eentermen/som/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/som/index.mdx
@@ -84,7 +84,8 @@ Voor de eentermen met $x$ als lettergedeelte krijgen we:
 &= \blue{-3}x
 \end{split}
 
-{{< expand "Waarom moeten we per soort optellen?" >}}
+<Expand title="Waarom moeten we per soort optellen?">
+
 Waarom mogen we enkel de coëfficiënten van **gelijksoortige** eentermen bij
 elkaar zetten? Waarom mogen we in ons voorbeeld
 
@@ -138,7 +139,8 @@ coëfficiënten** bij elkaar mogen optellen.
 Wanneer twee eentermen **niet hetzelfde lettergedeelte** hebben, kunnen we die
 omgekeerde distributiviteit niet toepassen en mogen we de coëfficiënten dus
 **niet bij elkaar optellen**.
-{{< /expand >}}
+
+</Expand>
 
 Als we nu alles terug samen zetten, krijgen we dus:
 
