--- a/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
@@ -40,7 +40,8 @@ de vector)" />. We schrijven de snelheidsvector als $\vec{v}$.
 Snelheid is dus een vector. Een vector heeft een grootte en een richting. Als
 minstens één van deze verandert, spreken we over **snelheidsverandering**.
 
-{{< expand "En wat met de zin?" >}}
+<Expand title="En wat met de zin?">
+
 Wanneer de zin van een snelheidsvector verandert, is er natuurlijk ook een
 snelheidsverandering. De **zin kan echter niet plots _een beetje_ veranderen**.
 Stel dat je met je fiets naar het einde van de straat fietst. Je kan dan niet
@@ -54,7 +55,8 @@ $19{,}9~\si{km/h}$ fietsen.
 Omdat de zin van de snelheidsvector nooit van het ene moment op het andere kan
 veranderen, heeft het niet veel 🤡 zin 🤡 om die in een les over
 snelheidsverandering te bespreken.
-{{< /expand >}}
+
+</Expand>
 
 ### Grootte van de snelheid verandert
 
