--- a/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
@@ -113,7 +113,8 @@ ondoorschijnende bol en één langs de onderkant.
 Achter de ondoorschijnende bol krijgen we nu drie schaduwgebieden. Het **middelste
 gebied is de kernschaduw**. De twee gebieden eromheen vormen de **bijschaduw**.
 
-{{< expand "Uitbreiding: grootte van de bijschaduw" >}}
+<Expand title="Uitbreiding: grootte van de bijschaduw">
+
 Bij een diffuse lichtbron is er **altijd een bijschaduw**. Hoe groot die bijschaduw is hangt van drie dingen af:
 
 1. Hoe groter de lichtbron is t.o.v. het voorwerp, des te groter de bijschaduw;
@@ -122,9 +123,11 @@ Bij een diffuse lichtbron is er **altijd een bijschaduw**. Hoe groot die bijscha
 
 Eenzelfde diffuse lichtbron kan dus in verschillende situaties andere groottes
 van bijschaduwen opleveren.
-{{< /expand >}}
 
-{{< expand "Uitbreiding: hard zonlicht" >}}
+</Expand>
+
+<Expand title="Uitbreiding: hard zonlicht">
+
 De zon is een diffuse lichtbron en zou dus _zachte_ schaduwen moeten geven.
 Toch vermijden fotografen direct zonlicht omdat het juist _harde_,
 onflatterende schaduwen geeft in een gezicht. Die harde schaduwen komen er
@@ -133,4 +136,5 @@ voorwerp verkleint. Wanneer de schaduw van een neus valt op de wang van het
 gezicht, is er amper een bijschaduw omdat de afstand tussen de neus en de wang
 heel klein is. De afstand tussen de maan en de aarde, daarentegen, is heel groot
 waardoor er bij een zonsverduistering wel een grote bijschaduw is.
-{{< /expand >}}
+
+</Expand>
