--- a/src/content/lessen/wiskunde/eentermen/macht/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/macht/index.mdx
@@ -44,7 +44,7 @@ Dan werken we dat als volgt uit:
  &= a^4
 \end{split}
 
-{{< expand "Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in \mathbb{Q}$)" >}}
+<Expand title="Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in \mathbb{Q}$)">
 
 We gaan ervan uit dat alle variabelen in deze les een element zijn van de reële
 getallen. Als je nog niet weet wat reële getallen zijn, mag je ook aannemen
@@ -54,7 +54,8 @@ betreft het berekenen van de macht en wortel van een eenterm.
 
 Bij het berekenen van even wortels, gaan we ervan uit dat de variabelen niet
 negatief zijn.
-{{< /expand >}}
+
+</Expand>
 
 ## Een macht van een eenterm berekenen
 
