--- a/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
@@ -65,13 +65,15 @@ Terug invullen in het voorbeeld geeft:
 
 $$-3y\cdot 2^3x^3z^3\cdot\orange{(-y)^2}\cdot (-2) \cdot (-5) = -3y\cdot 2^3x^3z^3\cdot\orange{y^2}\cdot (-2) \cdot (-5)$$
 
-{{< expand "Waarom mogen we een minteken vervangen door $(-1)$?" >}}
+<Expand title="Waarom mogen we een minteken vervangen door $(-1)$?">
+
 We mogen een minteken altijd vervangen door $(-1)$ omdat een minteken voor een
 factor hetzelfde betekent als "_vermenigvuldig met $-1$_".
 
 Bijvoorbeeld, $-1 \cdot 2 = - 2$. Dus of we nu $-2$ schrijven, of $-1 \cdot 2$
 of $(-1)\cdot 2$, dat is allemaal hetzelfde. Eén pot nat. 🍯
-{{< /expand >}}
+
+</Expand>
 
 ### Haakjes met een minteken uitwerken
 
@@ -91,7 +93,7 @@ coëfficiënt.
  &= \orange{-}3\cdot y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{2} \cdot \green{5}
 \end{split}
 
-{{< expand "Waarom mag je alle $(-1)-$en voorop zetten?" >}}
+<Expand title="Waarom mag je alle $(-1)-$en voorop zetten?">
 
 De vermenigvuldiging van rationale getallen is **commutatief**. <Mute
 text="(Hetzelfde geldt voor reële getallen.)" /> Dat betekent dat de volgorde
@@ -119,7 +121,8 @@ veranderen, dus we mogen gerust alle $(-1)-$en voorop zetten.
  \orange{(-1)} \cdot \orange{(-1)} \cdot \orange{(-1)} \cdot 2\cdot 5 \cdot 3 &= - 30\\\\\
 \end{split}
 
-{{< /expand >}}
+
+</Expand>
 
 ## Coëfficiënt uitrekenen
 
@@ -146,7 +149,8 @@ Dit resultaat terug invullen geeft:
 
 $$\orange{-240}\cdot y\cdot x^3z^3\cdot y^2$$
 
-{{< expand "Waarom mag je de coëfficiënt apart uitrekenen?" >}}
+<Expand title="Waarom mag je de coëfficiënt apart uitrekenen?">
+
 
 De vermenigvuldiging van rationale getallen is **commutatief**. <Mute
 text="(Dat is ook zo voor reële getallen.)" /> Dat betekent dat de volgorde
@@ -178,7 +182,8 @@ en als eerste uit te rekenen.
  = \orange{4 \cdot 3} \cdot a \cdot b \\\\\
  = \orange{12} \cdot a \cdot b \\\\\
 \end{split}
-{{< /expand >}}
+
+</Expand>
 
 ## Lettergedeelte uitrekenen
 
@@ -200,7 +205,8 @@ Het optellen van de exponenten van $\orange{y}$ geeft:
  &= -240\cdot \orange{y^{3}}\cdot x^3z^3\\\\\
 \end{split}
 
-{{< expand "Waarom tellen we de exponenten bij elkaar op?" >}}
+<Expand title="Waarom tellen we de exponenten bij elkaar op?">
+
 Stel dat we de volgende eenterm hebben:
 
 $$\orange{a^4} \cdot \blue{a^2} \cdot b^3$$
@@ -226,7 +232,8 @@ elkaar mag optellen** wanneer ze **hetzelfde grondtal hebben**:
 $$\orange{a^n} \cdot \blue{a^m} = a^{\orange{n} + \blue{m}}$$
 
 Waarbij $a, \orange{n}, \blue{m} \in \mathbb{Q}$ <Mute text="(of $\mathbb{R}$ mag ook)" />.
-{{< /expand >}}
+
+</Expand>
 
 ## Factoren rangschikken
 
