--- a/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
@@ -28,14 +28,15 @@ voorlopig echter tot vier basisbewerkingen beperken:
 
 We bespreken deze bewerkingen hieronder apart.
 
-{{< expand "Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in\mathbb{Q}$)" >}}
+<Expand title="Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in\mathbb{Q}$)">
 
 We gaan ervan uit dat alle variabelen in deze les een element zijn van de reële
 getallen. Als je nog niet weet wat reële getallen zijn, mag je ook aannemen
 dat de variabelen een element zijn van de rationale, gehele of zelfs natuurlijk
 getallen. Voor al die verzamelingen gelden dezelfde rekenregels wat
 betreft bewerkingen met veeltermen.
-{{< /expand >}}
+
+</Expand>
 
 ## Veeltermen optellen en aftrekken
 
