--- a/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
@@ -23,14 +23,15 @@ vereenvoudigen van een veelterm doe je zo:
 
 In deze les leggen we elk van die stappen wat verder uit.
 
-{{< expand "Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in\mathbb{Q}$)" >}}
+<Expand title="Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in\mathbb{Q}$)">
 
 We gaan ervan uit dat alle variabelen in deze les een element zijn van de reële
 getallen. Als je nog niet weet wat reële getallen zijn, mag je ook aannemen
 dat de variabelen een element zijn van de rationale, gehele of zelfs natuurlijk
 getallen. Voor al die verzamelingen gelden dezelfde rekenregels wat
 betreft het vereenvoudigen van veeltermen.
-{{< /expand >}}
+
+</Expand>
 
 ## Haakjes uitwerken
 
