--- a/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
@@ -93,9 +93,9 @@ voorbeeld.
 
 | Voor afronding               | Soort afronding     | Na afronding                                          | Uitleg                                                                                                                               |
 | ---------------------------- | ------------------- | ----------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------ |
-| $38\orange{4}{,}\gold{9}503$ | Op de eenheden      | $38\orange{5}\cdot 10^0$<br> of gewoon $38\orange{5}$ | $\gold{9} \ge 5$ dus $\orange{4}$ wordt $\orange{5}$<br> Vermenigvuldigen met $10^0 = 1$ omdat we afronden op de **een**heden        |
-| $3\orange{8}\gold{4}{,}9503$ | Op de tientallen    | $3\orange{8}\cdot 10^1$                               | $\gold{4} \lt 5$ dus $\orange{8}$ blijft $\orange{8}$<br> Vermenigvuldigen met $10^1 = 10$ omdat we afronden op de **tien**tallen    |
-| $\orange{3}\gold{8}4{,}9503$ | Op de honderdtallen | $\orange{4}\cdot 10^2$                                | $\gold{8} \ge 5$ dus $\orange{3}$ wordt $\orange{4}$<br> Vermenigvuldigen met $10^2 = 100$ omdat we afronden op de **honderd**tallen |
+| $38\orange{4}{,}\gold{9}503$ | Op de eenheden      | $38\orange{5}\cdot 10^0$<br/> of gewoon $38\orange{5}$ | $\gold{9} \ge 5$ dus $\orange{4}$ wordt $\orange{5}$<br/> Vermenigvuldigen met $10^0 = 1$ omdat we afronden op de **een**heden        |
+| $3\orange{8}\gold{4}{,}9503$ | Op de tientallen    | $3\orange{8}\cdot 10^1$                               | $\gold{4} \lt 5$ dus $\orange{8}$ blijft $\orange{8}$<br/> Vermenigvuldigen met $10^1 = 10$ omdat we afronden op de **tien**tallen    |
+| $\orange{3}\gold{8}4{,}9503$ | Op de honderdtallen | $\orange{4}\cdot 10^2$                                | $\gold{8} \ge 5$ dus $\orange{3}$ wordt $\orange{4}$<br/> Vermenigvuldigen met $10^2 = 100$ omdat we afronden op de **honderd**tallen |
 
 ## Optellingen en aftrekkingen
 
@@ -160,11 +160,12 @@ $$0{,}07\orange{6}\gold{8}7134 \approx 0{,}07\orange{7}$$
 
 <Attention title="Benaderingsregels">
 
-
 -   De uitkomst van een **optelling of aftrekking** moet hetzelfde **aantal
     cijfers na de komma** hebben als het getal in de berekening met het kleinste
     aantal cijfers na de komma;
 -   De uitkomst van een **vermenigvuldiging of deling** moet hetzelfde **aantal
     beduidende cijfers** hebben als het getal in de berekening met het kleinste
     aantal beduidende cijfers.
-    </Attention>
+
+</Attention>
+
