Fix typo in benaderingsregels: rond of -> rond af

--- a/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
@@ -74,7 +74,7 @@ Voor we de benaderingsregels uit de doeken doen, frissen we nog snel even op
 hoe je getallen moet afronden.
 
 -   Rond af naar **boven** als het **volgende cijfer groter of gelijk aan 5** is;
--   Rond of naar **beneden** als het **volgende cijfer kleiner dan 5** is.
+-   Rond af naar **beneden** als het **volgende cijfer kleiner dan 5** is.
 
 Als voorbeeld ronden we $384{,}9503$ af tot een bepaald aantal cijfers na de
 komma.
